traffic-shadowing/k8sconfig/internal-cluster/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-hello-world-v2
  name: grpc-hello-world-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: grpc-hello-world-v2
      app.kubernetes.io/name: grpc-hello-world
      version: v2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: grpc-hello-world-v2
        app.kubernetes.io/name: grpc-hello-world
        version: v2
    spec:
      containers:
      - image: docker.io/shikanon096/grpc-helloworld
        imagePullPolicy: Always
        name: grpc-hello-world
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
